--- a/.github/workflows/deploy_azure.yml
+++ b/.github/workflows/deploy_azure.yml
@@ -3,6 +3,11 @@
 
 name: Build and deploy Node.js app to Azure Web App 
 
+env:
+  AZURE_WEBAPP_NAME: westleysazureapp    # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: '14.x'                # set this to the node version to use
+
 on:
   push:
     branches:
@@ -16,9 +21,9 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Set up Node.js version
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
-        node-version: '14.x'
+        node-version: ${{ env.NODE_VERSION }}
 
     - name: npm install, build, and test
       run: |
@@ -49,7 +54,7 @@ jobs:
       id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'westleysapp'
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
         slot-name: 'production'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE}}
-        package: .
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
