--- a/.github/workflows/deploy_azure.yml
+++ b/.github/workflows/deploy_azure.yml
@@ -4,7 +4,7 @@
 name: Build and deploy Node.js app to Azure Web App 
 
 env:
-  AZURE_WEBAPP_NAME: westleysazureapp    # set this to your application's name
+  AZURE_WEBAPP_NAME: <appname> # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '14.x'                # set this to the node version to use
 
