--- a/.github/workflows/deploy_azure.yml
+++ b/.github/workflows/deploy_azure.yml
@@ -8,53 +8,53 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '14.x'                # set this to the node version to use
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
+#     steps:
+#     - uses: actions/checkout@v2
 
-    - name: Set up Node.js version
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ env.NODE_VERSION }}
+#     - name: Set up Node.js version
+#       uses: actions/setup-node@v2
+#       with:
+#         node-version: ${{ env.NODE_VERSION }}
 
-    - name: npm install, build, and test
-      run: |
-        npm install
-        npm run build --if-present
-        npm run test --if-present
+#     - name: npm install, build, and test
+#       run: |
+#         npm install
+#         npm run build --if-present
+#         npm run test --if-present
 
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v2
-      with:
-        name: node-app
-        path: .
+#     - name: Upload artifact for deployment job
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: node-app
+#         path: .
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+#   deploy:
+#     runs-on: ubuntu-latest
+#     needs: build
+#     environment:
+#       name: 'production'
+#       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-    steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v2
-      with:
-        name: node-app
+#     steps:
+#     - name: Download artifact from build job
+#       uses: actions/download-artifact@v2
+#       with:
+#         name: node-app
 
-    - name: 'Deploy to Azure Web App'
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE}}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+#     - name: 'Deploy to Azure Web App'
+#       id: deploy-to-webapp
+#       uses: azure/webapps-deploy@v2
+#       with:
+#         app-name: ${{ env.AZURE_WEBAPP_NAME }}
+#         slot-name: 'production'
+#         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE}}
+#         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
