need node_modules

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,8 +42,8 @@ steps:
 - task: CopyFiles@2
   inputs:
     SourceFolder: '$(System.DefaultWorkingDirectory)'
-    contents: node_modules
-    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    contents: node_modules/**
+    TargetFolder: '$(Build.ArtifactStagingDirectory)/node_modules'
 
 - task: CopyFiles@2
   inputs:
