--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,9 +62,6 @@ steps:
     contents: '**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)/node_modules'
 
-- script: ls
-  displayName: "why cant it find things"
-
 # - task: CopyFiles@2
 #   inputs:
 #     SourceFolder: '$(System.DefaultWorkingDirectory)'
@@ -73,7 +70,10 @@ steps:
 #       package.json
 #     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
-- script: cp '$(System.DefaultWorkingDirectory)/{server.js,package.json}' '$(Build.ArtifactStagingDirectory)'
+- script: |
+    ls
+    cp "$(System.DefaultWorkingDirectory)/server.js" '$(Build.ArtifactStagingDirectory)'
+    cp "$(System.DefaultWorkingDirectory)/package.json" '$(Build.ArtifactStagingDirectory)'
   displayName: "Copy server files"
 
 
