--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,10 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
-  server_npm_cache: "$(Pipeline.Workspace)/.servernpm"
-  web_npm_cache: "$(Pipeline.Workspace)/.webnpm"
+  # server_npm_cache: "$(Pipeline.Workspace)/.servernpm"
+  server_npm_cache: "$(System.DefaultWorkingDirectory)/.servernpm"
+  # web_npm_cache: "$(Pipeline.Workspace)/.webnpm"
+  web_npm_cache: "$(System.DefaultWorkingDirectory)/front_end/.webnpm"
   archiveName: "app-$(Build.BuildId).zip"
 
 steps:
@@ -35,11 +37,12 @@ steps:
   inputs:
     key: 'webnpm | "$(Agent.OS)" | package-lock.json'
     restoreKeys: |
-       npm | "$(Agent.OS)"
+       webnpm | "$(Agent.OS)"
     path: $(web_npm_cache)
   displayName: Cache web npm
 
 - script: |
+    echo "running npm --cache \"$(web_npm_cache)\" ci"
     npm --cache "$(web_npm_cache)" ci
     BUILD_PATH="$(Build.ArtifactStagingDirectory)/web" npm run build
   displayName: 'Install and build web app'
@@ -49,11 +52,13 @@ steps:
   inputs:
     key: 'servernpm | "$(Agent.OS)" | package-lock.json'
     restoreKeys: |
-       npm | "$(Agent.OS)"
+       servernpm | "$(Agent.OS)"
     path: $(server_npm_cache)
   displayName: Cache server npm
 
-- script: npm --cache "$(server_npm_cache)" ci
+- script: |
+    echo "running npm --cache \"$(server_npm_cache)\" ci"
+    npm --cache "$(server_npm_cache)" ci
   displayName: 'Install server dependencies'
 
 - task: CopyFiles@2
@@ -62,19 +67,17 @@ steps:
     contents: '**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)/node_modules'
 
-# - task: CopyFiles@2
-#   inputs:
-#     SourceFolder: '$(System.DefaultWorkingDirectory)'
-#     contents: 
-#       server.js
-#       package.json
-#     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(System.DefaultWorkingDirectory)'
+    contents: server.js
+      package.json
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
-- script: |
-    ls
-    cp "$(System.DefaultWorkingDirectory)/server.js" '$(Build.ArtifactStagingDirectory)'
-    cp "$(System.DefaultWorkingDirectory)/package.json" '$(Build.ArtifactStagingDirectory)'
-  displayName: "Copy server files"
+# - script: |
+#     cp "$(System.DefaultWorkingDirectory)/server.js" '$(Build.ArtifactStagingDirectory)'
+#     cp "$(System.DefaultWorkingDirectory)/package.json" '$(Build.ArtifactStagingDirectory)'
+#   displayName: "Copy server files"
 
 
 - task: ArchiveFiles@2
